force-app/main/default/objects/Brand_Visit_Junction__c/Brand_Visit_Junction__c.object-meta.xml
<CustomObject>
    <description>A link between village presence (Brand) and a Visit record. indicating what items were bought during a visit</description>
    <label>Brand Purchase</label>
    <nameField>
        <displayFormat>BVJ-{0000000}</displayFormat>
        <label>Brand Purchase</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brands Purchased</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>