force-app/main/default/objects/Brand_Visit_Junction__c/fields/Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>Amount_Spent__c</fullName>
    <description>Indicates the amount spent at this location</description>
    <inlineHelpText>Indicates the amount spent at this location</inlineHelpText>
    <label>Amount Spent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>