force-app/main/default/objects/Brand_Visit_Junction__c/fields/Parent_Brand__c.field-meta.xml
<CustomField>
    <fullName>Parent_Brand__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Village_Presence__r.Brand__r.Id,Village_Presence__r.Brand__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Brand</label>
    <type>Text</type>
</CustomField>