force-app/main/default/objects/Brand_Visit_Junction__c/fields/TEST1__c.field-meta.xml
<CustomField>
    <fullName>TEST1__c</fullName>
    <formula>Village_Presence__r.Brand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST1</label>
    <type>Text</type>
</CustomField>