force-app/main/default/objects/Brand_Visit_Junction__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates where the Visit Guest has bought items</description>
    <inlineHelpText>Indicates where the Visit Guest has bought items</inlineHelpText>
    <label>Brand Purchased</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Brands Purchased</relationshipLabel>
    <relationshipName>Brand_Visit_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>