force-app/main/default/objects/Brand_Visit_Junction__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <description>Represents the Visit record for the Guest</description>
    <inlineHelpText>Represents the Visit record for the Guest</inlineHelpText>
    <label>Visit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visit__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>VIP Visit, Personal Shopping Visit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Brands Purchased</relationshipLabel>
    <relationshipName>Brand_Visit_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>